# mcp-duplicati

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  vaultproxy.example.toml
.github/workflows/: publish.yml
src/mcp_duplicati/: __init__.py  server.py
tests/: test_tools.py
