[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-duplicati"
version = "0.1.0"
description = "MCP server for Duplicati backup management — status, logs, run, pause, resume, versions"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["mcp", "duplicati", "backup", "homelab"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.scripts]
mcp-duplicati = "mcp_duplicati.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_duplicati"]
